[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/font1.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/LevelSelect.gd" type="Script" id=2]
[ext_resource path="res://Src/Button Theme.tres" type="Theme" id=3]

[sub_resource type="DynamicFont" id=1]
size = 15
font_data = ExtResource( 1 )

[node name="LevelSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0117647, 0.0235294, 0.0705882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 63.0
margin_top = 13.0
margin_right = 252.0
margin_bottom = 42.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Select a level[/center]"
text = "Select a level"

[node name="Level1" type="Button" parent="."]
margin_left = 125.0
margin_top = 49.0
margin_right = 191.0
margin_bottom = 69.0
theme = ExtResource( 3 )
text = "Level 1"

[node name="Level2" type="Button" parent="."]
margin_left = 125.0
margin_top = 79.0
margin_right = 191.0
margin_bottom = 99.0
theme = ExtResource( 3 )
text = "Level 2 "

[node name="Boss" type="Button" parent="."]
margin_left = 125.0
margin_top = 109.0
margin_right = 191.0
margin_bottom = 129.0
theme = ExtResource( 3 )
text = "Boss"

[connection signal="pressed" from="Level1" to="." method="_on_Level1_pressed"]
[connection signal="pressed" from="Level2" to="." method="_on_Level2_pressed"]
[connection signal="pressed" from="Boss" to="." method="_on_Boss_pressed"]
